--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 <script src="./apps/js/jquery-.3.5.1.min.js" type="text/javascript"></script>
 
 <!-- lib -->
-<link href="./apps/lib/swiper-bundle.min.css" rel="stylesheet" type="text/css">
-<script src="./apps/lib/swiper-bundle.min.js" type="text/javascript"></script>
+<link href="./apps/lib/swiper.min.css?v=4.5.1" rel="stylesheet" type="text/css">
+<script src="./apps/lib/swiper.min.js?v=4.5.1" type="text/javascript"></script>
 </head>
 
 <body>
@@ -377,6 +377,9 @@
                             </li>
                         </ul>
                     </div>   
+
+                    <!-- Add Scrollbar -->
+                    <div class="swiper-scrollbar"></div>
                 </div>
                 
                 <!--
@@ -498,6 +501,9 @@
             autoplay: {
                 delay:0,
                 waitForTransition: true,
+            },
+            scrollbar: {
+                el: '.swiper-scrollbar',
             },
             on:{
                 slideChangeTransitionEnd: function(s){
