#210527 유의사항 스타일 수정

--- a/sub.html
+++ b/sub.html
@@ -318,7 +318,7 @@
                             <p class="note_tit">유의사항 및 이미지 저장 방법</p>
                             <div class="note_list">
                                 <ul>
-                                    <li>- 아이폰 (ios) 사용자 분들은 완성된 이미지를 꾹 눌러<br>이미지를 다운로드 해주시면 사진첩에 저장됩니다!</li>
+                                    <li>아이폰 (ios) 사용자 분들은 완성된 이미지를 꾹 눌러<br>이미지를 다운로드 해주시면 사진첩에 저장됩니다!</li>
                                 </ul>
                             </div>
                         </div>
